--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "ddeboer/imap": "^1.14",
         "guzzlehttp/guzzle": "^7.2",
         "jeroennoten/laravel-adminlte": "^3.8",
         "laravel/framework": "^9.19",
@@ -13,7 +14,8 @@
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.1",
         "symfony/http-client": "^6.1",
-        "symfony/mailgun-mailer": "^6.1"
+        "symfony/mailgun-mailer": "^6.1",
+        "webklex/laravel-imap": "^4.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
