--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@fortawesome/fontawesome-free": "^6.2.1",
         "@popperjs/core": "^2.10.2",
         "axios": "^1.1.2",
         "bootstrap": "^5.2.1",
